--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
       <artifactId>HikariCP</artifactId>
       <version>2.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.heroku.sdk</groupId>
+      <artifactId>heroku-jdbc</artifactId>
+      <version>0.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jscience</groupId>
+      <artifactId>jscience</artifactId>
+      <version>4.3.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
