--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
       <artifactId>jscience</artifactId>
       <version>4.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.twilio.sdk</groupId>
+      <artifactId>twilio-java-sdk</artifactId>
+      <version>6.3.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
