--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
       <version>6.3.0</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.liferay</groupId>
+      <artifactId>org.apache.commons.fileupload</artifactId>
+      <version>1.2.2.LIFERAY-PATCHED-1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.3.3.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -68,7 +78,7 @@
           <appendAssemblyId>false</appendAssemblyId>
           <archive>
             <manifest>
-              <mainClass>Main</mainClass>
+              <mainClass>com.kievstar.webcameras.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
